@@ -4,7 +4,8 @@
   "license": "Apache2",
   "dependencies": {
     "ember": "1.7.0",
-    "moment": "2.8.4",
+    "moment": "2.10.6",
+    "moment-timezone": "0.4.0",
     "ember-data": "1.0.0-beta.11",
     "ember-i18n": "2.9.0",
     "bootstrap": "3.3.1",
